# compilationdb

./: .editorconfig  .gitignore  .lefthook.yml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build.yml  code-scan.yml
.zed/: settings.json
src/compilationdb/: __init__.py
tests/: test_compilationdb.py
