[build-system]
requires = ["setuptools==80.10.2", "setuptools-scm==9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "compilationdb"
requires-python = ">= 3.11"
maintainers = [{ name = "PythonLot", email = "pythonlot@googlegroups.com" }]
description = """\
  JSON Compilation Database (compile_commands.json) generator for Python C\
  extension modules.\
  """
readme = "README.md"
license = "Unlicense"
license-files = ["LICENSE.md"]
keywords = [
  "compilation database",
  "compile_commands.json",
  "llvm",
  "clang",
  "clangd",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Programming Language :: Objective C",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.scripts]
gitrole = "compilationdb.__main__:main"

[project.urls]
Source = "https://www.github.com/pythonlot/compilationdb"
Issues = "https://www.github.com/pythonlot/compilationdb/issues"

[dependency-groups]
dev = [
  "committed==1.1.10",
  "editorconfig-checker==3.6.0",
  "lefthook==2.0.15",
  "ruff==0.14.14",
  "taskipy==1.14.1",
  "ty==0.0.14",
  "typos==1.42.2",
]

[tool.pytest]
addopts = ["-n", "auto"]

[tool.ruff]
line-length = 79
format.docstring-code-format = true
format.docstring-code-line-length = 72
lint.select = ["ALL"]
lint.ignore = [
  "PYI021", # docstring-in-stub
  "D203",   # one-blank-line-before-class
  "D213",   # multi-line-summary-second-line
  "D418",   # overload-with-docstring
]
lint.per-file-ignores."tests/**.py" = [
  "S101",    # assert
  "INP001",  # implicit-namespace-package
  "PLR2004", # magic-value-comparison
]
lint.pycodestyle.max-doc-length = 72

[tool.setuptools_scm]

[tool.taskipy.settings]
cwd = "."

[tool.taskipy.tasks]
setup = { cmd = "lefthook install", help = "set up the project" }
check = { cmd = "lefthook run check", help = "check the code" }
fix = { cmd = "lefthook run fix", help = "check and fix the code" }

[tool.ty]
terminal.error-on-warning = true

[tool.typos]
files.extend-exclude = ["uv.lock"]
default.unicode = false
